[gd_scene load_steps=5 format=3 uid="uid://b2qt0biuylxaf"]

[ext_resource type="Script" uid="uid://vewhlig5jmkf" path="res://main_ui.gd" id="1_0hol4"]
[ext_resource type="Texture2D" uid="uid://d02xfdehptq5l" path="res://mars-dunes-8col-16bit565-2.png" id="1_wtcfe"]
[ext_resource type="Script" uid="uid://bkqvvhu5sbl27" path="res://panel.gd" id="2_0e48y"]
[ext_resource type="Texture2D" uid="uid://5soa0xn4qsb3" path="res://desert-backgorund.png" id="3_epypp"]

[node name="Node2D" type="Node2D"]
position = Vector2(560, 301)

[node name="mainUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 2.0
offset_right = 42.0
offset_bottom = 40.0
script = ExtResource("1_0hol4")

[node name="background" type="TextureRect" parent="mainUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -268.0
offset_top = -151.0
offset_right = 232.0
offset_bottom = 149.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.05263)
texture = ExtResource("1_wtcfe")

[node name="combat zone" type="Panel" parent="mainUI/background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.0
offset_top = -93.0
offset_right = 161.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.994819, 1.00985)
script = ExtResource("2_0e48y")

[node name="TextureRect" type="TextureRect" parent="mainUI/background/combat zone"]
layout_mode = 0
offset_right = 320.0
offset_bottom = 230.0
texture = ExtResource("3_epypp")
expand_mode = 3

[node name="LittleGuyEconomy" type="Panel" parent="mainUI/background"]
layout_mode = 1
offset_left = 2.0
offset_top = 1.9
offset_right = 102.0
offset_bottom = 51.9

[node name="CanvasLayer" type="CanvasLayer" parent="mainUI/background/LittleGuyEconomy"]

[node name="GoldLabel" type="Label" parent="mainUI/background/LittleGuyEconomy/CanvasLayer"]
offset_left = 323.0
offset_top = 222.0
offset_right = 395.0
offset_bottom = 271.0
text = "gold: 2"
uppercase = true

[node name="shopbox" type="VBoxContainer" parent="mainUI/background/LittleGuyEconomy"]
layout_mode = 0
offset_left = 6.0
offset_top = 4.75
offset_right = 46.0
offset_bottom = 44.75

[node name="range minion" type="Button" parent="mainUI/background/LittleGuyEconomy/shopbox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
toggle_mode = true

[node name="shopbox2" type="VBoxContainer" parent="mainUI/background/LittleGuyEconomy"]
layout_mode = 0
offset_left = 52.0
offset_top = 4.75
offset_right = 92.0
offset_bottom = 44.75

[node name="melee minion" type="Button" parent="mainUI/background/LittleGuyEconomy/shopbox2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 22.3

[node name="littleguy" type="Panel" parent="mainUI/background"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -81.5
offset_right = 82.0
offset_bottom = -1.5
grow_vertical = 0

[node name="bigguy" type="Panel" parent="mainUI/background"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -81.0
offset_top = 0.95
offset_right = -1.0
offset_bottom = 80.95
grow_horizontal = 0

[connection signal="button_down" from="mainUI/background/LittleGuyEconomy/shopbox/range minion" to="mainUI" method="_on_range_minion_button_down"]
[connection signal="button_down" from="mainUI/background/LittleGuyEconomy/shopbox2/melee minion" to="mainUI" method="_on_melee_minion_button_down"]
